@@ -29,12 +29,12 @@
 same-type date in the whole table"
 	    :serial t
 	    :components
-	    ((:file "square-table-mop")
-	     (:file "def-square-table")
-	     (:file "def-square-table-tests")
-	     (:file "square-table-schema")
+	    ((:file "square-table-schema")
 	     (:file "square-table-storage")
 	     (:file "square-table")
+	     (:file "square-table-mop")
+	     (:file "def-square-table")
+	     #+skip(:file "def-square-table-tests")
 	     (:file "square-table-display")
 	     (:file "square-table-iterators")
 	     (:file "square-table-row+col-accessors")
