@@ -4,123 +4,91 @@
 ;; macro (according to CCL), and I want it cleanly documented.
 
 
-(defun canonicalize-option (option)
-  "Do some checks and return option in correct format.  Signal error for unrecognized or illegal options.
+(defun canonicalize-option-as-slot (option)
+  "Process deftable options and put them into slot form.  Return NIL for unrecognized
+deftable options.
+
+ (:option &rest values)
+is transformed into 
+ (option :reader :option
+	 :initform values
+	 :allocation :class)
+
+Signal error for unrecognized or illegal options.
 
 We check that options have values
-We check that there are no duplicate options
+We do not check that there are no duplicate options - we leave that to closs
 We check that :metaclass has not been specified
-We pass through unrecognized options
+We check that values does not have :allocation 
+
 
 This is a top-level function that calls a few helper functions to do
 its job"
-  (let* ((option-name (car option))
-	 (option-values
-	  (let ((values (cdr option)))
-	    (assert values ()
-		    (error 'table-option-missing-value :option-name option-name))
-	    values)))
-    (check-duplicate-option option-name)
-    (let ((table-option-maybe
-	   (apply #'canonicalize-deftable-option option-name option-values)))
-      (if table-option-maybe table-option-maybe
-	  (let ((class-option-maybe
-		 (apply #'canonicalize-defclass-option option-name option-values)))
-	    (if class-option-maybe class-option-maybe
-		`(,option-name ,@option-values)))))))
-		 
+  (destructuring-bind (option-name &rest option-values) option
+    (assert option-values ()
+	    (error 'table-option-missing-value :option-name option-name))
+    #+we-check-for-duplicates(check-duplicate-option option-name)
+    (if (member option-name *def-square-table-options*)
+	(let ((local-symbol (intern (symbol-name option-name) :table-dev)))
+	  `(,local-symbol :reader ,local-symbol
+			  :initform ,@option-values
+			  :allocation :class))
+	nil)))
 		 
 
-(defun check-duplicate-option (option-name)
+#+clos-checks-for-duplicates(defun check-duplicate-option (option-name)
   "Check for duplicate options in options-seen"
   (declare (special options-seen))
   (if (member option-name options-seen :test #'eq)
       (error 'duplicate-table-option :option-name option-name) 
       (push option-name options-seen)))
+(defparameter *def-square-table-options*
+  '(:value-type :value-normalizer :default-value
+    :equality-predicate :comparator
+    :adjustable)
+  "Legal square table options")
 
-(defun canonicalize-deftable-option (option-name &rest option-values)
-  "Check table options and bring them to correct form.  Return NIL if
-  not a table-option"
-    (macrolet ((assert-function ()
-		 `(assert (functionp option-value) ()
-			  (error 'table-option-not-function
-				 :option-name option-name))))
-      (case option-name
-	(:value-type 
-		     `(:value-type ,(car option-values)))
-	(:value-normalizer #+skip(assert-function)
-	 `(:value-normalizer ,(car option-values)))
-	(:equality-predicate #+skip(assert-function)
-			     `(:equality-predicate ,(car option-values)))
-	(:comparator #+skip(assert-function)
-	 `(:comparator ,(car option-values)))
-	(:default-value 
-	 `(:default-value ,(car option-values)))
-	(:adjustable 
-	 `(:adjustable ,(car option-values)))
-	(t nil))))
 
-(define-test canonicalize-deftable-option
+(define-test canonicalize-option-as-slot
   "Spot check of the functions main operation"
-  (assert-equal '(:value-type integer)
-		(canonicalize-deftable-option :value-type 'integer))
-  #+skip(assert-error 'table-option-not-function
-		(canonicalize-deftable-option :comparator t))
+  (assert-equal '(value-type :reader value-type
+			    :initform 'integer
+			    :allocation :class)
+		(canonicalize-option-as-slot '(:value-type 'integer)))
   (assert-true
-		(canonicalize-deftable-option :comparator
-					      (lambda (x y)
-						t))))
+		(canonicalize-option-as-slot '(:comparator
+					       (lambda (x y)
+						 t))))
+  (assert-error 'TABLE-OPTION-MISSING-VALUE
+		(canonicalize-option-as-slot '(:value-type)))
+  (assert-true (not (canonicalize-option-as-slot '(:documentation "foo")))))
 
 
-(defun canonicalize-defclass-option (option-name &rest option-values)
+(defun canonicalize-option-as-defclass-option (option)
   "Process class options:
 - :metaclass is not allowed and we signal an error
 - :default-initargs is not handled, we signal an error.  This needs to
   be fixed in a sensible manner by incorpoating ccl code
 - :documentation is handled"
+  (destructuring-bind (option-name &rest option-values) option
   (case option-name
     (:metaclass (error 'illegal-table-option :option-name option-name))
     #+skip(:default-initargs `(:default-initargs ,@option-values))
-    (t `(,option-name ,@option-values))))
+    (t `(,option-name ,@option-values)))))
 
-(define-test canonicalize-defclass-option
+(define-test canonicalize-option-as-defclass-option
   (assert-error 'illegal-table-option
-		(canonicalize-defclass-option :metaclass 'foo))
+		(canonicalize-option-as-defclass-option '(:metaclass 'foo)))
   (assert-equal '(:documentation "text")
-		(canonicalize-defclass-option :documentation "text"))
+		(canonicalize-option-as-defclass-option '(:documentation "text")))
   (assert-equal '(:default-initargs
 		  :slot0 val0
 		  :slot1 val1)
-		(apply #'canonicalize-defclass-option :default-initargs
-		       '(:slot0 val0 :slot1 val1))))
+		(canonicalize-option-as-defclass-option '(:default-initargs
+							  :slot0 val0 :slot1 val1))))
 
 
-(define-test canonicalize-option
-  "Check duplicate testing, and successful option processing"
-  (declare (special options-seen table-options-1))
-  (assert-equal '((:default-value 3)
-		  (:documentation "text"))
-		(progn
-		  (setf table-options-1
-			'((:default-value 3)
-			  (:documentation "text"))
-			options-seen nil)
-		  (mapcar #'canonicalize-option table-options-1)))
-  (assert-error 'duplicate-table-option
-		(progn
-		  (setf table-options-1
-			'((:default-value 3)
-			  (:documentation "text")
-			  (:default-value 4))
-			options-seen nil)
-		  (mapcar #'canonicalize-option table-options-1)))
-  (assert-error 'illegal-table-option
-		(progn
-		  (setf table-options-1
-			'((:default-value 3)
-			  (:metaclass 'foo))
-			options-seen nil)
-		  (mapcar #'canonicalize-option table-options-1))))
+
 
 
 (defun canonicalize-table-super (table-super)
@@ -136,24 +104,37 @@ its job"
 
 
 (defun canonicalize-table-slot (slot)
-  (declare (special slot-options-seen))
+  "check that ROW-LABELS-SCHEMA and COL-LABELS-SCHEMA have a :NAMES
+option.  Everything else is passed through"
+#+we-check-for-duplicates(declare (special slot-options-seen))
+#+we-check-for-duplicates(check-duplicate-slot slot-name)
+#+we-check-for-duplicates(setf slot-options-seen nil)
   (destructuring-bind (slot-name &rest slot-options) slot
     (assert slot-name ()
 	    (error 'illegal-table-slot-name :slot-name slot-name))
-    #+clos-does-not-handle-duplicate-slots(check-duplicate-slot slot-name)
-    (setf slot-options-seen nil)
-    (do* ((options slot-options (cddr options))
-	  (option-name (car options) (car options)))
-	((null options))
-      (check-duplicate-slot-option option-name slot-name)
-      (unless (cdr options)
-	(error 'missing-slot-option-value :slot-name slot-name
-	       :slot-option-name (car options))))
-    (destructuring-bind (slot-name &rest slot-options) slot
-      (canonicalize-table-slot-by-name slot-name slot-options))))
+    (when (or (eql slot-name 'row-labels-schema)
+	      (eql slot-name 'col-labels-schema))
+      (assert (find :names slot-options) ()
+	      (error 'missing-table-slot-option :slot-option-name :names
+		     :slot-name slot-name)))
+    `(,slot-name ,@slot-options)))
+
+
+(define-test canonicalize-table-slot
+  (declare (special slots-seen))
+  (assert-equal '(row-labels-schema :names (a b c) :default-value 3.14)
+		(canonicalize-table-slot '(row-labels-schema :names (a b c)
+					   :default-value 3.14)))
+  (assert-error 'illegal-table-slot-name
+		(canonicalize-table-slot '(nil :names (a b c)
+					   :default-value 3.14)))
+  (assert-error 'missing-table-slot-option
+		(canonicalize-table-slot '(row-labels-schema 
+					   :default-value 3.14
+					   :default-value 2.71))))
 
 ;; we leave to CLOS to handle duplicate slots
-#+skip(defun check-duplicate-slot (slot-name)
+#+we-check-for-duplicates(defun check-duplicate-slot (slot-name)
   "Check for duplicate slots in slots-seen"
   (declare (special slots-seen))
   (if (member slot-name slots-seen :test #'eq)
@@ -161,7 +142,7 @@ its job"
       (push slot-name slots-seen)))
 
 ;; we leave to CLOS to handle duplicate slot-options
-(defun check-duplicate-slot-option (option-name slot-name)
+#+we-check-for-duplicates(defun check-duplicate-slot-option (option-name slot-name)
   "Check for duplicate slots in slots-seen"
   (declare (special slot-options-seen))
   (if (member option-name slot-options-seen :test #'eq)
@@ -217,62 +198,15 @@ its job"
       ,@(when adjustable `(:adjustable ,adjustable)))))
 
 
-(defun canonicalize-table-slot-by-name (name options)
-  "Canonicalize table slot"
-  (when (or (eql name 'row-labels-schema)
-	      (eql name 'col-labels-schema))
-    (assert (find :names options) ()
-	    (error 'missing-table-slot-option :slot-option-name :names
-		   :slot-name name)))
-  `(,name ,@options))
-
-(define-test canonicalize-table-slot-by-name
-  (assert-equal '(row-labels-schema :names (a b c))
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema (list :names '(a b c))))
-  (assert-equal '(row-labels-schema :names (a b c) :default-value 3.14)
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema
-		 '(:names (a b c)
-		   :default-value 3.14)))  
-  (assert-error 'missing-table-slot-option
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema (list :name '(a b c))))
-  #+not-implemented(assert-error 'missing-table-slot-option-value 
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema
-		 '((:names (a b c))
-		   (:default-value))))
-  #+not-implemented(assert-error 'illegal-table-slot-option-value
-		(canonicalize-table-slot-by-name
-		 'row-labels-schema
-		 '(:names (a b c)
-		   :default-value 3.14
-		   :equality-predicate 2.71)))
-)
-  
-(define-test canonicalize-table-slot
-  (declare (special slots-seen))
-  (assert-equal '(row-labels-schema :names (a b c) :default-value 3.14)
-		(progn
-		  (setf slots-seen nil)
-		  (canonicalize-table-slot '(row-labels-schema :names (a b c)
-					     :default-value 3.14))))
-  (assert-error 'duplicate-table-slot-option
-		(progn
-		  (setf slots-seen nil
-			options-seen nil)
-		  (canonicalize-table-slot '(row-labels-schema :names (abc)
-					     :default-value 3.14
-					     :default-value 2.71)))))
-
-
 
 
 (defmacro def-square-table (table-name table-supers slots
 			    &rest table-options
 			    &environment env)
-  "prepare to call ensure-class-using-class"
+  "prepare to call ensure-class-using-class
+
+Table options are converted to slots, and both them and the slots are
+checked for corectness"
   (declare (ignore env))
   (declare (special options-seen slots-seen))
   (assert (and table-name
@@ -282,45 +216,34 @@ its job"
 	slots-seen nil)
     (let ((canonicalized-supers (mapcar #'canonicalize-table-super table-supers))
 	   (canonicalized-slots (mapcar #'canonicalize-table-slot slots))
-	   (canonicalized-options (mapcar #'canonicalize-option table-options)))
+	   (canonicalized-options-as-slots
+	    (remove nil (mapcar #'canonicalize-option-as-slot
+						   table-options)))
+	  (canonicalized-defclass-options
+	   (remove nil (mapcar #'canonicalize-option-as-defclass-option
+						   table-options))))
        `(defclass ,table-name (,@canonicalized-supers)
-	 (,@canonicalized-slots)
+	 (,@canonicalized-slots
+	  ,@canonicalized-options-as-slots)
 	 (:metaclass square-table-class)
-	 ,@canonicalized-options)))
+	 ,@canonicalized-defclass-options)))
 
 (define-test def-square-table-macro
     (assert-expands (defclass test-table ()
-		    ((row-labels-schema :names (a b c)
-					:comparator #'char<)
-		     (col-labels-schema :names (1 2 3)))
-		    (:metaclass square-table-class)
-		    (:documentation "Test table for unit tests")
-		    (:value-normalizer #'floor))
+		      ((row-labels-schema :names (a b c)
+					  :comparator #'char<
+					  :allocation :class)
+		       (col-labels-schema :names (1 2 3)
+					  :allocation :class)
+		       (value-normalizer :reader
+					 value-normalizer
+					 :initform #'floor
+					 :allocation :class))
+		      (:metaclass square-table-class)
+		      (:documentation "Test table for unit tests"))
 		  (def-square-table test-table ()
 		    ((row-labels-schema :names (a b c)
 					:comparator #'char<)
-		     (col-labels-schema :names (1 2 3)))
-		    (:documentation "Test table for unit tests")
-		    (:value-normalizer #'floor)))
-  (assert-expands (defclass test-table ()
-		    ((row-labels-schema :names (a b c)
-					:comparator #'char<)
-		     (col-labels-schema :names (1 2 3)))
-		    (:metaclass square-table-class)
-		    (:documentation "Test table for unit tests")
-		    (:value-normalizer #'floor))
-		  (def-square-table test-table ()
-		    ((row-labels-schema :names (a b c)
-					:comparator #'char<)
-		     (col-labels-schema :names (1 2 3)))
-		    (:documentation "Test table for unit tests")
-		    (:value-normalizer #'floor)))
-  #+test-does-not-capture-error
-  (assert-error 'duplicate-table-slot-option 
-		  (def-square-table test-table ()
-		    ((row-labels-schema :names (a b c)
-					:comparator #'char<
-					:comparator #'char>)
 		     (col-labels-schema :names (1 2 3)))
 		    (:documentation "Test table for unit tests")
 		    (:value-normalizer #'floor))))
