@@ -1,3 +1,11 @@
+2015-03-10  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* square-table/def-square-table.lisp: Updated code and tests to
+	latest specification
+
+	* doc/developer-doc/mv-table-developer-documentation.org: Updated
+	specification on metaclass role and added role of :class alocation
+
 2015-03-08  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* square-table/def-square-table.lisp (): Remove all
